--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,9 +28,11 @@ jobs:
       uses: hashicorp/setup-terraform@v1
       with:
         cli_config_credentials_token: ${{ secrets.TF_API_TOKEN }}
+        tf_actions_working_dir: './tf'
 
     - name: Terraform Init
       run: terraform init
+      
 
     - name: Terraform Format
       run: terraform fmt -check
