--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -27,7 +27,7 @@ jobs:
       uses: hashicorp/terraform-github-actions@master
       with:
         tf_actions_subcommand: 'init'
-        tf_actions_working_dir: '.'
+        tf_actions_working_dir: '/tf'
         tf_actions_comment: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
