--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -28,7 +28,7 @@ jobs:
       with:
         tf_actions_version: 0.12.13
         tf_actions_subcommand: 'init'
-        tf_actions_working_dir: '/tf'
+        tf_actions_working_dir: './tf'
         tf_actions_comment: true
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
