--- a/.github/workflows/terraform.yml
+++ b/.github/workflows/terraform.yml
@@ -34,15 +34,15 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       
 
-    - name: Terraform Format
-      uses: hashicorp/terraform-github-actions@master
-      with:
-        tf_actions_version: 0.12.13
-        tf_actions_subcommand: 'fmt'
-        tf_actions_working_dir: './tf'
-        tf_actions_comment: true
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+#     - name: Terraform Format
+#       uses: hashicorp/terraform-github-actions@master
+#       with:
+#         tf_actions_version: 0.12.13
+#         tf_actions_subcommand: 'fmt'
+#         tf_actions_working_dir: './tf'
+#         tf_actions_comment: true
+#       env:
+#         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Terraform Plan
       uses: hashicorp/terraform-github-actions@master
